# DPC

./: README.md  pyproject.toml
src/mtdp/covid/: mtp_covid_03_up_down_simulation.ipynb  mtp_covid_04_enricher_degs_all_cases.ipynb  mtp_covid_05a_best_cutoffs_sim_and_save_config.ipynb  mtp_covid_05b_best_cutoffs_report.ipynb  mtp_covid_05c_best_cutoffs_statistics.ipynb  mtp_covid_05d_cutoffs_summaries.ipynb  mtp_covid_05e_cutoffs_summaries_end_report.ipynb  mtp_covid_05x_all_plots.ipynb  mtp_covid_06a_best_cutoffs_chi2_statistics.ipynb  mtp_covid_07a_DPC_run_all_1.0-pro.ipynb  mtp_covid_07a_DPC_run_all_1.5-flash.ipynb  mtp_covid_07a_DPC_run_all_1.5-pro.ipynb  mtp_covid_07b_test_ensemble_correct_sampling.ipynb  mtp_covid_08a_DPC_sampling_pathways_selected.ipynb  mtp_covid_08b_DPC_run_many_gemini_models_selected.ipynb  mtp_covid_08b_DPC_run_model_1_selected.ipynb  mtp_covid_08b_DPC_run_model_3_selected.ipynb  mtp_covid_09a_query_Ensemble_find_papers_in_pubmed.ipynb  mtp_covid_09a_query_find_papers_in_pubmed.ipynb  mtp_covid_09b_query_MSD_find_papers_in_pubgem.ipynb  mtp_covid_09b_query_find_papers_in_pubgem.ipynb  mtp_covid_10_DPC_Ensemble_hard_and_soft_reprodutibility.ipynb  mtp_covid_10_DPC_all_hard_and_soft_reprodutibility.ipynb  mtp_covid_11_DPC_MSD_hard_and_soft_reprodutibility.ipynb  mtp_covid_11_DPC_sel_hard_and_soft_reprodutibility.ipynb  mtp_covid_12_DPC_Ensemble_gemini_x_pubmed.ipynb  mtp_covid_12_DPC_soft_all_gemini_x_pubmed.ipynb  mtp_covid_13_DPC_MSD_gemini_x_pubmed.ipynb  mtp_covid_13_DPC_soft_sel_gemini_x_pubmed.ipynb  mtp_covid_14_DPC_CSC.ipynb  mtp_covid_15_DPC_confusion_FP_FN_discovery.ipynb  mtp_covid_16_expression_boxplot.ipynb  params.yml
src/mtdp/mb/: mtp_MB_03_up_down_DEGs_simulation.ipynb  mtp_MB_04_enricher_degs_all_cases.ipynb  mtp_MB_05a_best_cutoffs_sim_and_save_config.ipynb  mtp_MB_05b_best_cutoffs_report.ipynb  mtp_MB_05c_best_cutoffs_statistics.ipynb  mtp_MB_05d_cutoffs_summaries.ipynb  mtp_MB_05e_cutoffs_summaries_end_report.ipynb  mtp_MB_06b_bayesian_ simulation.ipynb  mtp_MB_07a_DPC_run_all_1.5-flash.ipynb  mtp_MB_07a_DPC_run_all_1.5-pro.ipynb  mtp_MB_07b_test_ensemble_correct_sampling.ipynb  mtp_MB_08a_DPC_sampling_pathways_selected.ipynb  mtp_MB_08b_DPC_run_many_gemini_models_selected.ipynb  mtp_MB_09a_query_Ensemble_find_papers_in_pubmed.ipynb  mtp_MB_09a_query_find_papers_in_pubmed.ipynb  mtp_MB_09b_query_MSD_find_papers_in_pubgem.ipynb  mtp_MB_09b_query_find_papers_in_pubgem.ipynb  mtp_MB_09c_query_find_papers_stats.ipynb  mtp_MB_10_DPC_Ensemble_hard_and_soft_reprodutibility.ipynb  mtp_MB_10_DPC_all_hard_and_soft_reprodutibility.ipynb  mtp_MB_11_DPC_MSD_hard_and_soft_reprodutibility.ipynb  mtp_MB_11_DPC_sel_hard_and_soft_reprodutibility.ipynb  mtp_MB_12_DPC_Ensemble_gemini_x_pubmed.ipynb  mtp_MB_12_DPC_soft_all_gemini_x_pubmed.ipynb  mtp_MB_13_DPC_MSD_gemini_x_pubmed.ipynb  mtp_MB_13_DPC_soft_sel_gemini_x_pubmed.ipynb  mtp_MB_14_DPC_CSC.ipynb  mtp_MB_15_DPC_confusion_FP_FN_discovery.ipynb  mtp_MB_16_expression_boxplot.ipynb  mtp_MB_documentation.ipynb  params.yml
src/mtdp/src/: Basic.py  Sequence.py  Shannon.py  biomart_lib.py  biopax_lib.py  biopython.py  config_lib.py  dunnett_test.R  enricher_lib.py  entrez_conversion.py  excel_lib.py  gemini_lib.py  gene_lib.py  gisaid_lib.py  graphic_lib.py  image_lib.py  nlp_cluster_lib.py  pubmed_lib.py  reactome_lib.py  stat_lib.py
