[project]
name = "mtdp"
version = "0.1.0"
description = ""
authors = [
    {name = "flalix",email = "flalix@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    babel==2.16.0
    backcall==0.2.0
    beautifulsoup4==4.12.3
    biomart==0.9.2
    biopython==1.85
    biothings-client==0.4.1
    bleach==6.2.0
    blinker==1.9.0
    blis==0.7.11
    bokeh
    bottleneck==1.4.2
    click==8.1.8
    cloudpathlib==0.21.0
    cloudpickle==3.0.0
    comm==0.2.1
    confection==0.1.5
    conllu==6.0.0
    cymem==2.0.11
    dash==3.0.3
    dash-cytoscape==1.0.2
    dask==2025.2.0
    distributed==2025.2.0
    docopt==0.6.2
    docutils==0.21.2
    entrypoints==0.4
    et-xmlfile==2.0.0
    filelock==3.17.0
    flask==3.0.3
    fsspec==2024.12.0
    glob2==0.7
    h11==0.14.0
    h5py==3.13.0
    html5lib==1.1
    httpcore==1.0.2
    httplib2==0.22.0
    httpx==0.27.0
    huggingface-hub==0.30.2
    idna==3.7
    imagesize==1.4.1
    ipython==8.12.3
    ipywidgets==8.1.5
    itsdangerous==2.2.0
    jedi==0.19.2
    jinja2==3.1.6
    joblib==1.4.2
    json5==0.9.25
    jsonschema==4.23.0
    jupyter==1.1.1
    jupyterlab
    kaleido==0.2.1
    langcodes==3.5.0
    language-data==1.3.0
    lxml==5.3.2
    marisa-trie==1.2.1
    markdown-it-py==3.0.0
    markdown2==2.5.3
    matplotlib==3.10.0
    matplotlib-inline==0.1.6
    matplotlib-venn==1.1.2
    mdurl==0.1.2
    mistune==3.1.2
    mpmath==1.3.0
    murmurhash==1.0.12
    mygene==3.2.2
    nbclient==0.10.2
    nbconvert==7.16.6
    nbformat==5.10.4
    nest-asyncio==1.6.0
    networkx==3.4.2
    nltk==3.9.1
    notebook==7.3.2
    notebook-shim==0.2.4
    numpy==1.26.4
    openpyxl==3.1.5
    overrides==7.4.0
    packaging==24.2
    pandas==2.2.3
    pandoc
    parso==0.8.4
    partd==1.4.2
    patsy==1.0.1
    pickleshare==0.7.5
    pillow==11.1.0
    pip==25.0.1
    platformdirs==4.3.7
    plotly==5.24.1
    preshed==3.0.9
    prometheus_client==0.21.1
    prompt-toolkit==3.0.43
    pybind11==2.13.6
    pybiopax==0.1.5
    pydantic==2.11.3
    pydantic-core==2.33.1
    pygments==2.19.1
    pyparsing==3.2.0
    pysbd==0.3.4
    pysocks==1.7.1
    pystow==0.7.0
    graphviz
    python-json-logger
    pytorch
    pytz==2024.1
    qtpy==2.4.1
    referencing==0.30.2
    regex==2024.11.6
    requests==2.32.3
    rich==14.0.0
    roman-numerals-py==3.1.0
    safetensors==0.5.3
    scikit-learn==1.6.1
    scikit-posthocs==0.11.4
    scipy==1.15.2
    scispacy==0.5.5
    seaborn==0.13.2
    send2trash==1.8.2
    setuptools==75.8.0
    shellingham==1.5.4
    sniffio==1.3.0
    snowballstemmer==2.2.0
    soupsieve==2.5
    spacy==3.7.5
    spacy-legacy==3.0.12
    spacy-loggers==1.0.5
    sphinx==8.2.3
    db-sqlite3
    tabulate==0.9.0
    tenacity==9.0.0
    terminado==0.17.1
    thinc==8.2.5
    tika==3.1.0
    tinycss2==1.4.0
    tokenizers==0.21.1
    toolz==1.0.0
    torchaudio==2.5.1
    torchvision==0.20.1
    tornado==6.4.2
    tqdm==4.67.1
    traitlets==5.14.3
    transformers==4.51.3
    typer==0.15.2
    typing-extensions==4.12.2
    typing-inspection==0.4.0
    typing_extensions==4.12.2
    urllib3==2.3.0
    wasabi==1.1.3
    weasel==0.4.1
    websocket-client==1.8.0
    werkzeug==3.0.6
    wheel==0.45.1
    widgetsnbextension==4.0.13
    wrapt==1.17.2
    xmltodict==0.14.2
    PyYAML
    yarg==0.1.9
    zict==3.0.0
    zipp==3.21.0
]

[tool.poetry]
packages = [{include = "mtdp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
